@startuml
class RemoveInlineKeyboardEffect {
    + TargetMessageId : int <<get>> <<set>>
}
class RemoveInlineKeyboardEffectApplier {
    + RemoveInlineKeyboardEffectApplier(botClient:ITelegramBotClient)
    + <<async>> Apply(effect:EffectBase) : Task
}
class "IEffectApplier`1"<T> {
}
EffectBase <|-- RemoveInlineKeyboardEffect
"IEffectApplier`1" "<AddMessageEffect>" <|-- RemoveInlineKeyboardEffectApplier
RemoveInlineKeyboardEffectApplier --> "_botClient" ITelegramBotClient
@enduml
